fix responsive styling issue where nav overlaps textarea, other minor fixes

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -32,7 +32,6 @@ nav #brand {
 }
 
 .fa-angle-double-down {
-  margin-left: 2em;
   color: red;
   cursor: pointer;
 }
