--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -22,6 +22,7 @@
     align-items: center;
   }
   .new-tweet {
+    margin-top: 130px; 
     width : 90%;
   }
   .tweetContainer {
